# brcode

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  libbrcode.dylib
.github/workflows/: clojure.yml  coverage.yml  dart.yml  node.js.yml  rust.yml
benches/: both_ways.rs  crc16.rs  parse.rs  to_brcode.rs
clj-brcode/: CHANGELOG.md  README.md  libbrcode.dylib  project.clj
clj-brcode/src/clj_brcode/: core.clj
clj-brcode/test/clj_brcode/: core_test.clj
dartbrcode/: .packages  CHANGELOG.md  README.md  libbrcode.dylib  pubspec.yaml
dartbrcode/.dart_tool/: package_config.json
dartbrcode/lib/: dartbrcode.dart
dartbrcode/test/: lib.dart
jvm-brcode/: Makefile  README.md  build.gradle  settings.gradle
jvm-brcode/src/main/java/jvm/brcode/: Brcode.java
jvm-brcode/src/test/java/jvm/brcode/: BrcodeTest.java
node-brcode/: README.md  index.js  index.test.js  package-lock.json  package.json
src/: aux.rs  emit.rs  lib.rs  model.rs  parse.rs  type.rs
tests/: lib.rs
