[package]
name = "brcode"
version = "0.1.0"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
edition = "2018"
description = "Crate to parse and emit BR Codes"
readme = "README.md"
documentation = "https://docs.rs/brcode/"
repository = "https://github.com/naomijub/brcode"
keywords = ["BRCode", "QRCode", "EMV"]
license = "LGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "parse"
harness = false