[package]
name = "brcode"
version = "0.1.2"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
edition = "2018"
description = "Crate to parse and emit BR Codes"
readme = "README.md"
documentation = "https://docs.rs/brcode/"
repository = "https://github.com/naomijub/brcode"
keywords = ["BRCode", "QRCode", "EMV"]
license = "LGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "brcode"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
edn-rs = "0.13.3"
edn-derive = "0.3.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "to_brcode"
harness = false